Updated ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 #ignore these files
-.*
 !.gitignore
 settings.xml
 *.iml
 tests/output/*
 tests/node_modules
+build/build.number
+artifacts/*
+build-docbox/*
