Removed deployment condition

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ deploy:
       branch:
         - master
         - development
-      condition: "$ENGINE = lucee@4.5"
+      #condition: "$ENGINE = lucee@4.5"
     skip_cleanup: true
     #AWS Credentials need to be set in Travis
     access_key_id: $AWS_ACCESS_KEY
